# Outvox

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  dev.ps1  docker-compose.demo.yml  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
BE/: .dockerignore  Dockerfile  config.py  db_service.py  docker-compose.yml  env.example  nginx.conf  outbound_main.py  requirements.txt
BE/core/: __init__.py  auth.py  db.py  error_handler.py  exceptions.py  logging_config.py  media_stream_token.py  responses.py  schema.py  twilio_validation.py
BE/demo/: index.html  mock_services.py
BE/models/: __init__.py  call.py  campaign.py  lead.py  phone_validation.py  popup.py  settings.py  sms.py  store.py
BE/prompts/: base_prompt.txt  greeting_variations.json  training_examples.json
BE/repositories/: __init__.py  base.py  call_repository.py  campaign_repository.py  lead_repository.py  phone_number_repository.py  phone_status_repository.py  popup_repository.py  sms_repository.py  store_repository.py  template_repository.py
BE/routers/: __init__.py  (+12 more)
FE/: .eslintrc.js  env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
tests/: conftest.py  requirements.txt  test_config_agent_id.py  test_consent_classifier.py  test_db_connection_string.py  test_dnc_detector.py  test_media_stream_token.py  test_phone_validator.py  test_template_renderer.py
(+104 files in other folders)
